Refactor[#347]: 프로필 태그 캐시 전용 DTO(ProfileTags) 분리 및 CacheManager 책임 분리
- MemberProfileTag.forCache() 제거 — 불완전한 엔티티 생성 방지
- ProfileTags record 추가 — Redis 직렬화/역직렬화 전용 DTO
- MemberProfileTagCacheManager 분리 — 캐시 읽기/쓰기/직렬화 전담 (SRP)
- MemberProfileTagReader 경량화 — 조회 퍼사드로서 캐시→DB fallback 흐름만 조율
- RedisRepository.pipelinePut() 추가 — 벌크 캐시 적재 시 1만 RTT → 1 RTT
- 소비자(scoreAgainst, MemberProfileResponse, MatchingResultDetailItem) 시그니처 ProfileTags로 통일